--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
     <div class="container top-header">
         <div class="row fixed-top mt-0 p-2 bg-dark text-white">
             <div class="col-lg-4">
-                <!-- <form class="d-flex" role="search">
-                    <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-
-                </form> -->
+                <a class="navbar-brand" href="#">
+                    <img src="./img/logo.png" alt="Your Logo" class="img-fluid">
+                </a>
 
             </div>
             <div class=" col-sm-3 text-sm-end col-lg-4 text-center  ">
-                <h4 class="fw-bold fs-5"> JSY </h4>
+                <h4 class="fw-bold fs-5 text-center"> JSY </h4>
             </div>
             <div class="col-lg-4 text-lg-end">
                 <i class="fa-solid fa-user"></i>
@@ -32,7 +31,7 @@
             </div>
         </div>
 
-        <nav class="navbar navbar-expand-lg bg-dark navbar-default fixed-top mt-5 text-white">
+        <nav class="navbar navbar-expand-lg bg-dark navbar-default nav-bar-list fixed-top mt-5 text-white">
             <div class="container-fluid justify-content-center">
                 <div class="row">
                     <button class="navbar-toggler me-end" type="button" data-bs-toggle="collapse"
@@ -76,9 +75,9 @@
     <!-- header end-->
     <!-- section one start -->
     <section class="section-one">
-        <div class="container-fluid mt-4 section-one">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-6 bg-infotext-center">
+                <div class="col-lg-6 bg-infotext-center lft-sec">
                     <h1 class="p-2 mt-5 fw-5 banner-heading "> The Gift of Good Style</h1>
                     <p class="p-2 mt-3 banner-sub-heading">I'm a paragraph. Click here to add your own text and edit me.
                         It’s easy. Just
@@ -86,8 +85,8 @@
                         double click me to add your own content and make changes to the font.</p>
                     <button type="button" class="btn btn-success px-4 mt-2 rounded-4">Shop Now</button>
                 </div>
-                <div class="col-lg-6 p-0">
-                    <img src="./img/candle" alt="" class="image-fluid w-100">
+                <div class="col-lg-6   right-sec">
+                    <img src="./img/84770f_acfc43cf570e4f6aa092ca77cb3a96c5~mv2.webp" alt="" class="image-fluid w-100">
                 </div>
             </div>
         </div>
@@ -113,10 +112,10 @@
                             <div class="col-md-3">
                                 <div class="card">
                                     <div class="card-img">
-                                        <img src="https://via.placeholder.com/700x500.png/CB997E/333333?text=1"
+                                        <img src="./img/colorful pen.webp"
                                             class="img-fluid">
                                     </div>
-                                    <div class="card-img-overlay">Slide 1</div>
+                                    <div class="card-img-overlay fw-bold text-white fs-1">Colorful-Pen</div>
                                 </div>
                             </div>
                         </div>
@@ -124,10 +123,10 @@
                             <div class="col-md-3">
                                 <div class="card">
                                     <div class="card-img">
-                                        <img src="https://via.placeholder.com/700x500.png/DDBEA9/333333?text=2"
+                                        <img src="./img/totebag.webp"
                                             class="img-fluid">
                                     </div>
-                                    <div class="card-img-overlay">Slide 2</div>
+                                    <div class="card-img-overlay fw-bold text-white fs-1">Tote-Bagt</div>
                                 </div>
                             </div>
                         </div>
@@ -135,10 +134,10 @@
                             <div class="col-md-3">
                                 <div class="card">
                                     <div class="card-img">
-                                        <img src="https://via.placeholder.com/700x500.png/FFE8D6/333333?text=3"
+                                        <img src="./img/diary.webp"
                                             class="img-fluid">
                                     </div>
-                                    <div class="card-img-overlay">Slide 3</div>
+                                    <div class="card-img-overlay fw-bold fw-bold text-white fs-1">Dairy-Product</div>
                                 </div>
                             </div>
                         </div>
@@ -146,10 +145,10 @@
                             <div class="col-md-3">
                                 <div class="card">
                                     <div class="card-img">
-                                        <img src="https://via.placeholder.com/700x500.png/B7B7A4/333333?text=4"
+                                        <img src="./img/phone case.webp"
                                             class="img-fluid">
                                     </div>
-                                    <div class="card-img-overlay">Slide 4</div>
+                                    <div class="card-img-overlay fw-bold fw-bold text-white fs-1">Phone-Case</div>
                                 </div>
                             </div>
                         </div>
@@ -157,10 +156,10 @@
                             <div class="col-md-3">
                                 <div class="card">
                                     <div class="card-img">
-                                        <img src="https://via.placeholder.com/700x500.png/A5A58D/333333?text=5"
+                                        <img src="./img/shocks.webp"
                                             class="img-fluid">
                                     </div>
-                                    <div class="card-img-overlay">Slide 5</div>
+                                    <div class="card-img-overlay fw-bold fw-bold text-white fs-1">Shocks-set</div>
                                 </div>
                             </div>
                         </div>
@@ -168,10 +167,10 @@
                             <div class="col-md-3">
                                 <div class="card">
                                     <div class="card-img">
-                                        <img src="https://via.placeholder.com/700x500.png/6B705C/eeeeee?text=6"
+                                        <img src="./img/totebag.webp"
                                             class="img-fluid">
                                     </div>
-                                    <div class="card-img-overlay">Slide 6</div>
+                                    <div class="card-img-overlay fw-bold fw-bold text-white fs-1">HandBag</div>
                                 </div>
                             </div>
                         </div>
@@ -217,13 +216,12 @@
     <!-- section 4 start -->
      <section id="interior" class="section-fourth m-4">
 
-        <div class="container text-center  my-4 fw-bold">
+        <div class=" text-center  my-4 fw-bold">
             <h2 class="common-heading">
                 Home & Living Essentials </h2>
             <hr class="w-25 mx-auto">
         </div>
 
-        <div class="container">
 
             <div class="container text-center justify-content-center">
                 <div class="row gx-0 p-5">
@@ -252,30 +250,7 @@
                   </div>
                 </div>
               </div>
-            <!-- <div class="row justify-content-center gx-0">
-                <div class="col-lg-6 d-flex">
-                    <img src="./img/totebag.webp" class="image-fluid">
-
-                    <div class="" style="background-color: rgb(230, 230, 250); width: 381px; height: 381px;">
-                        <h2 class="mt-5 ms-3">Geometric Bedding</h2>
-                        <p class="mt-3 ms-3">$99.109</p>
-                        <button type="button" class="btn btn-outline-dark px-3 rounded-4 ms-3">Add To Cart</button>
-                    </div>
-
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-6 d-flex">
-
-                    <div style="background-color: rgb(230, 230, 250); width: 381px; height: 381px; ">
-                        <h2 class="mt-5 ms-3"> Geometric Bedding</h2>
-                        <p class="mt-3 ms-3"> $99.109 </p>
-                        <button type="button" class="btn btn-outline-dark px-4 rounded-4 ms-3">Add To Cart</button>
-                    </div>
-                    <img src="./img/totebag.webp" class="image-fluid">
-                </div>
-
-            </div> -->
+          
 
             <div class="row justify-content-center mt-4">
                 <div class="col-lg-3 justify-content-center">
@@ -287,81 +262,10 @@
                     <p class="mt1"><a class="link-opacity-100" href="#">Refresh This Page</a></p>
                 </div>
             </div>
-        </div>
+     
 
     </section> 
 
-
-    <!-- sectiob 4 end -->
-
-    <!-- footer start -->
-    <!-- <div class="container-fluid footer pt-6">
-        <div class="row py-4">
-            <div class="col-lg">
-                <h6 class="ms-4">Shop</h6>
-                <ul class="list">
-                    <li class="list" aria-current="true">
-                        All</li>
-                    <li class="list">Home & Living</li>
-                    <li class="list">Accessories</li>
-                    <li class="list">Stationery</li>
-                    <li class="list">Sale</li>
-                    <li class="list">Gift Card</li>
-                </ul>
-            </div>
-            <div class="col-lg">
-                <h6 class="">
-                    Helpful Links</h6>
-                <ul class="list ">
-                    <li class="list" aria-current="true">
-
-
-                        FAQ </li>
-                    <li class="list">Terms & Conditions</li>
-                    <li class="list">Privacy Policy</li>
-                    <li class="list">Shipping Policy
-
-                    </li>
-                    <li class="list">Refund Policy</li>
-                    <li class="list">Cookie Policy</li>
-                </ul>
-            </div>
-            <div class="col-lg">
-                <h6 class="">
-                    Contact</h6>
-                <ul class="list">
-                    <li class="list" aria-current="true">
-
-
-                        info@mysite.com </li>
-                    <li class="list">123-456-7890</li>
-                    <li class="list">500 Terry Francine Street,</li>
-                    <li class="list">San Francisco, CA 94158</li>
-
-                </ul>
-                <div class="ms-4">
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-solid fa-music"></i>
-                </div>
-            </div>
-            <div class="col-lg">
-                <h6 class="me-5">Subscribe</h6>
-                <p>Subscribe to our newsletter and be among the first to hear about new arrivals, events and special
-                    offers.</p>
-                <div class="mb-3">
-                    <div><label for="exampleFormControlInput1" class="form-label">Email</label></div>
-                    <input type="email" class=" border border-dark border-2 rounded-2" id="exampleFormControlInput1">
-                    <button type="button" class="btn btn-dark px-3 rounded-5">Subscribe</button>
-                </div>
-                <p>© 2024 by JSY. Powered and secured by Wix</p>
-
-            </div>
-            <div class="col-lg-12 text-center">
-                <h1 class="footer-heading">JSY</h1>
-            </div>
-        </div>
-    </div> -->
 
 
     <footer class="w-100 py-4 flex-shrink-0 footer">
